# bmp8bit

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
resources/: windows_color_table.txt
src/: binary_format.rs  image_rs.rs  lib.rs
src/color_tables/: mod.rs  windows_color_table.rs
tests/: regression_testing.rs
